# RacingPlanner

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_LOG.md  LICENSE  README.md  docker-compose.yml  render.yaml
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  deploy.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_lap_split_type_to_int.py  0003_garmin_lt_endurance.py  0004_activity_is_race.py  0005_perf_indexes.py
backend/app/: config.py  database.py  main.py  security.py
backend/app/analytics/: classification_engine.py  compute_pipeline.py  fitness_engine.py  formatters.py  gpx_parser.py  metrics_engine.py  race_predictor.py  weather.py
backend/app/api/: _errors.py  deps.py  routes_activities.py  routes_admin.py  routes_auth.py  routes_fitness.py  routes_garmin.py  routes_goals.py  routes_races.py  routes_sync.py  routes_webhooks.py
backend/app/garmin/: client.py  crypto.py  sync.py
backend/app/models/: __init__.py  schema.py
backend/app/strava/: auth.py  client.py  sync.py
backend/scripts/: manage_strava_subscription.py
backend/tests/: test_exception_handler.py  test_garmin_crypto.py  test_security.py  test_webhooks.py
frontend/: index.html  netlify.toml  package-lock.json  package.json  vite.config.js
frontend/css/: styles.css
frontend/js/: api.js  app.js  bootstrap.js  charts.js  map.js  util.js
frontend/js/pages/: activity_detail.js  activity_list.js  admin.js  dashboard.js  fitness.js  profile.js  (+3 more)
frontend/public/: _redirects
