[project]
name = "racingplanner-backend"
version = "0.1.0"
description = "RacingPlanner backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "itsdangerous>=2.2",
    "httpx>=0.28",
    "python-multipart>=0.0.12",
    "cryptography>=43",
    "python-dateutil>=2.9",
    "garminconnect>=0.2.25",
    "sentry-sdk[fastapi]>=2.18",
    "numpy>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "testcontainers[postgres]>=4.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
# SIM is dropped — its "simplify to ternary / single if" checks hurt
# readability in the numeric / conditional-heavy analytics code.
select = ["E", "F", "W", "I", "UP", "B"]
# B008: FastAPI `Depends()` in defaults is the idiomatic pattern.
# B904: raise-from is desirable but noisy across ported code.
# B905: zip strict= — analytics code guarantees equal lengths by construction.
# B007: a few ported loops keep explicit index names for clarity.
ignore = ["E501", "B008", "B904", "B905", "B007"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
